--- a/.gitignore
+++ b/.gitignore
@@ -136,3 +136,11 @@ dmypy.json
 .DS_Store
 Thumbs.db
 package.json
+api_keys.py
+*.sqlite3
+*.sqlite
+*.db
+
+data/poi_data.json
+data/reference_data.json
+data/example.json
